--- a/app/src/main/res/layout/activity_promoter_profit.xml
+++ b/app/src/main/res/layout/activity_promoter_profit.xml
@@ -65,6 +65,19 @@
     <android.support.v4.view.ViewPager
         android:id="@+id/promote_profit_viewpager"
         android:layout_width="match_parent"
+        android:layout_height="@dimen/dp_200"
+        />
+
+    <android.support.design.widget.TabLayout
+        android:id="@+id/promote_profit_tab_down"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        />
+    <include layout="@layout/view_split_bar_light"/>
+
+    <android.support.v4.view.ViewPager
+        android:id="@+id/promote_profit_viewpager_down"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
         />
 
