--- a/app/src/main/res/layout/item_promote_profit_order.xml
+++ b/app/src/main/res/layout/item_promote_profit_order.xml
@@ -59,42 +59,90 @@
         android:layout_toRightOf="@id/item_img"
         android:gravity="center_vertical"
         android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/item_pay"
+        <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:gravity="left"
-            android:lineSpacingMultiplier="1.2"
-            android:text="付款金额\n￥15"
-            android:textColor="@color/text_gray"
-            android:textSize="@dimen/sp_12"
-            />
+            android:orientation="vertical">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="left"
+                android:lineSpacingMultiplier="1.2"
+                android:text="付款金额"
+                android:textColor="@color/text_gray"
+                android:textSize="@dimen/sp_12"
+                />
+            <TextView
+                android:id="@+id/item_pay"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="left"
+                android:lineSpacingMultiplier="1.2"
+                android:text="￥15"
+                android:textColor="@color/black"
+                android:textSize="@dimen/sp_16"
+                />
+        </LinearLayout>
 
-        <TextView
-            android:id="@+id/item_profit"
+        <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:gravity="left"
-            android:lineSpacingMultiplier="1.2"
-            android:text="成交预估收入\n￥3.84"
-            android:textColor="@color/text_gray"
-            android:textSize="@dimen/sp_12"
-            />
+            android:orientation="vertical">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="left"
+                android:lineSpacingMultiplier="1.2"
+                android:text="成交预估收入"
+                android:textColor="@color/text_gray"
+                android:textSize="@dimen/sp_12"
+                />
+            <TextView
+                android:id="@+id/item_profit"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="left"
+                android:lineSpacingMultiplier="1.2"
+                android:text="￥15"
+                android:textColor="@color/black"
+                android:textSize="@dimen/sp_16"
+                />
+        </LinearLayout>
 
-        <TextView
-            android:id="@+id/item_percentage"
+        <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:gravity="left"
-            android:lineSpacingMultiplier="1.2"
-            android:text="提成\25.60%"
-            android:textColor="@color/text_gray"
-            android:textSize="@dimen/sp_12"
-            />
+            android:orientation="vertical">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="left"
+                android:lineSpacingMultiplier="1.2"
+                android:text="提成"
+                android:textColor="@color/text_gray"
+                android:textSize="@dimen/sp_12"
+                />
+            <TextView
+                android:id="@+id/item_percentage"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="left"
+                android:lineSpacingMultiplier="1.2"
+                android:text="25.60%"
+                android:textColor="@color/black"
+                android:textSize="@dimen/sp_16"
+                />
+        </LinearLayout>
+
 
     </LinearLayout>
 
