--- a/app/src/main/res/layout/activity_groupon_detail.xml
+++ b/app/src/main/res/layout/activity_groupon_detail.xml
@@ -281,10 +281,11 @@
                 android:background="@color/white"
                 />
 
-            <android.support.v4.view.ViewPager
+            <cn.czyugang.tcg.client.widget.ViewPagerWrap
                 android:id="@+id/groupon_detail_viewpager"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:minHeight="@dimen/dp_10"
                 />
         </LinearLayout>
 
