--- a/app/src/main/res/layout/fragment_good_description.xml
+++ b/app/src/main/res/layout/fragment_good_description.xml
@@ -7,7 +7,7 @@
 
     <TextView
         android:textSize="@dimen/sp_18"
-        android:text="这是描述"
+        android:text=""
         android:id="@+id/fragment_good_descript"
         android:layout_width="match_parent"
         android:layout_height="200dp" />
