--- a/app/src/main/res/layout/activity_inform_details.xml
+++ b/app/src/main/res/layout/activity_inform_details.xml
@@ -37,6 +37,7 @@
             android:orientation="horizontal">
 
             <TextView
+                android:id="@+id/inform_details_name"
                 style="@style/text_12_dark_gray"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -257,11 +258,13 @@
             android:orientation="vertical"
             >
             <ImageView
+                android:id="@+id/thumb_up"
                 android:layout_width="18dp"
                 android:layout_height="18dp"
                 android:src="@drawable/ic_thumb_up"
                 android:layout_gravity="center"/>
             <TextView
+                android:id="@+id/thumb_num"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/dp_5"
@@ -286,6 +289,7 @@
                 android:src="@drawable/ic_comment"
                 android:layout_gravity="center"/>
             <TextView
+                android:id="@+id/comment_num"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/dp_5"
