--- a/app/src/main/res/layout/activity_order_track.xml
+++ b/app/src/main/res/layout/activity_order_track.xml
@@ -46,6 +46,7 @@
 
     <!--自提券码/配送时间-->
     <LinearLayout
+        android:id="@+id/order_track_person"
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp_33"
         android:background="@color/white"
@@ -86,6 +87,8 @@
             android:layout_width="@dimen/dp_36"
             android:layout_height="@dimen/dp_36"
             android:layout_margin="@dimen/dp_10"
+            android:src="@drawable/icon_delivery_man_white"
+            android:background="@drawable/bg_main_light_blue"
             />
 
         <LinearLayout
